updates to website and cv

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li> -->
                     <!-- <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li> -->
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/hthabib" target="_blank">linkedin.com/in/hthabib</a></li>
-                    <li><i class="fa fa-file-pdf-o"></i><a href="assets/images/Hana_Habib_CV.pdf" target="_blank">Curriculum Vitae (CV)</a></li>
+                    <li><i class="fa fa-file-pdf-o"></i><a href="assets/Hana_Habib_CV.pdf" target="_blank">Curriculum Vitae (CV)</a></li>
                     <!-- <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/username</a></li> -->
                     <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li> -->
                     <li><i class="fa fa-book"></i><a href="./publications.html">Publications</a></li>
@@ -102,14 +102,14 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Selected Publications</h2>
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Neil Shah, and Rajan Vaish. <a href="https://arxiv.org/pdf/1903.07033.pdf" target="_blank">"Impact of Contextual Factors on SnapchatPublic Sharing."</a> <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’19).</i> 2019. <b>[Best Paper Honorable Mention award]</b></span>
+                    <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Floriah Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
                 </div><!--//item-->  
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Aditi Jannu, Neha Sridhar, Chelse Swoopes, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Floriah Schaub. "An Empirical Analysis of Data Deletion and Opt-Out Choices on 150 Websites." <i>In Proceedings of the Fifteenth Symposium on Usable Privacy and Security (SOUPS'19).</i> 2019.</span>
+                    <span class="project-tagline"><b>Hana Habib</b>, Neil Shah, and Rajan Vaish. <a href="https://arxiv.org/pdf/1903.07033.pdf" target="_blank">"Impact of Contextual Factors on Snapchat Public Sharing."</a> <i>In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2019. <b>[Best Paper Honorable Mention award]</b></span>
                 </div><!--//item-->  
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, Vidya Gopalakrishnan, Sarah Pearman, Jeremy Thomas, Alessandro Acquisti, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-prying.pdf" target="_blank">"Away From Prying Eyes: Analyzing Usage and Understanding of Private Browsing."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
-                </div><!--//item-->   
+                    <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Aditi Jannu, Neha Sridhar, Chelse Swoopes, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Floriah Schaub. <a href="https://www.usenix.org/system/files/soups2019-habib.pdf" target="_blank">"An Empirical Analysis of Data Deletion and Opt-Out Choices on 150 Websites."</a><i> In Proceedings of the Symposium on Usable Privacy and Security (SOUPS).</i> 2019.</span>
+                </div><!--//item-->  
                 <div class="item">
                         <span class="project-tagline"><a href=./publications.html>Full list of publications</a></span>
                 </div><!--//item-->
@@ -203,11 +203,19 @@
             <section class="section scholarship-section">
                 <h2 class="section-title"><i class="fa fa-graduation-cap"></i>Scholarships &amp; Awards</h2>
                 <div class ="item">
-                <span class="project-title">Privacy Scholars Fellowship Program Participant</span> - <span class="project-tagline">Hosted by the Program on Economics &amp; Privacy (PEP) at George Mason University Antonin Scalia Law School to support research on the economics of privacy and data security.</span>
+                    <span class="project-title">Facebook Research Award</span> - <span class="project-tagline">Awarded $50,000 to pursue a project exploring how to improve the user experience for controlling targeted advertising on Facebook.</span>
                 </div>
                 <br>
                 <div class ="item">
-                <span class="project-title">CyLab Presidential Fellowship</span> - <span class="project-tagline">A tuition scholarship awarded to high-achieving exemplary CyLab graduate students researching topics in security and privacy.</span>
+                    <span class="project-title">Rising Stars Participant</span> - <span class="project-tagline">Selected to participate in the 2019 Rising Stars Workshop, an academic career workshop for women in EECS. </span>
+                </div>
+                <br>
+                <div class ="item">
+                    <span class="project-title">CyLab Presidential Fellowship (2017/2018 and 2019/2020)</span> - <span class="project-tagline">A tuition scholarship awarded to high-achieving exemplary CyLab graduate students researching topics in security and privacy.</span>
+                    </div>
+                    <br>
+                <div class ="item">
+                <span class="project-title">Privacy Scholars Fellowship Program Participant</span> - <span class="project-tagline">Hosted by the Program on Economics &amp; Privacy (PEP) at George Mason University Antonin Scalia Law School to support research on the economics of privacy and data security.</span>
                 </div>
                 <br>
                 <div class ="item">
@@ -234,14 +242,14 @@
                     <tr>
 	                    <td>
 	                    <div class="item">
-	                            <b> PhD Women@SCS Board (2019-)</b>
+	                            <b> PhD Women@SCS Board (2019)</b>
 	                        </div><!--//item-->
 	                    </td>
                		</tr>
                     <tr>
 	                    <td>
 	                    <div class="item">
-	                            <b>Graduate Student Assembly (2019-)</b>
+	                            <b>Graduate Student Assembly (2019)</b>
 	                        </div><!--//item-->
 	                    </td>
                		</tr>
