--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Selected Publications</h2>
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Floriah Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
+                    <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Florian Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
                 </div><!--//item-->  
                 <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Neil Shah, and Rajan Vaish. <a href="https://arxiv.org/pdf/1903.07033.pdf" target="_blank">"Impact of Contextual Factors on Snapchat Public Sharing."</a> <i>In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2019. <b>[Best Paper Honorable Mention award]</b></span>
