--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Floriah Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
+                    <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Florian Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
                 </div><!--//item--> 
                 <div class="item">
                     <span class="project-tagline">Vinayshekhar Bannihatti Kumar, Roger Iyengar, Namita Nisal, Yuanyuan Feng, <b>Hana Habib</b>, Peter Story, Sushain Cherivirala, Margaret Hagan, Lorrie Faith Cranor, Shomir Wilson, Florian Schaub, Norman Sadeh. <a href="https://usableprivacy.org/static/files/kumar_iyengar_www_2020.pdf">“Finding a Choice in a Haystack: Automatic Extraction of Opt-Out Statements from Privacy Policy Text.”</a> <i>In Proceedings of the Web Conference (the Web Conf)</i>. 2020.</span>
