updated with chi2021 paper

--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,9 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
                 <div class="item">
+                    <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Yaxing Yao, Alessandro Acquisti, Lorrie Faith Cranor, Joel Reidenberg, Norman Sadeh, and Florian Schaub. “Toggles, Dollar Signs, and Triangles: How to (In)Effectively Convey Privacy Choices with Icons and Link Texts.”<i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2021.</span>
+                </div><!--//item--> 
+                <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Florian Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
                 </div><!--//item--> 
                 <div class="item">
