added FPF award

--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,7 @@
                     <li class="item">
                         <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Florian Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
                         <ul>
+                            <li>Student Paper Honorable Mention for <a href="https://fpf.org/pppm2021/">Future of Privacy Forum's Privacy Papers for Policymakers Award</a></li>
                             <li>Cited in <a href="https://oag.ca.gov/privacy/ccpa/current">CCPA Rulemaking</a></li>
                         </ul>
                     </li><!--//item--> 
