adding proposal doc

--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
                     <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li> -->
                     <!-- <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li> -->
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/hana-habib" target="_blank">linkedin.com/in/hthabib</a></li>
-                    <li><i class="fa fa-file-pdf-o"></i><a href="assets/Hana_Habib_CV.pdf" target="_blank">Curriculum Vitae (CV)</a></li>
+                    <li><i class="fa fa-file-pdf-o"></i><a href="assets/docs/Hana_Habib_CV.pdf" target="_blank">Curriculum Vitae (CV)</a></li>
                     <!-- <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/username</a></li> -->
                     <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li> -->
                 </ul>
