post graduation update

--- a/publications.html
+++ b/publications.html
@@ -51,13 +51,25 @@
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
                 <ol reversed>
                     <li class="item">
-                        <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Yaxing Yao, Alessandro Acquisti, Lorrie Faith Cranor, Joel Reidenberg, Norman Sadeh, and Florian Schaub. “Toggles, Dollar Signs, and Triangles: How to (In)Effectively Convey Privacy Choices with Icons and Link Texts.”<i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2021.</span>
+                        <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Ellie Young, Lorrie Faith Cranor. "Identifying User Needs for Advertising Controls on Facebook." <i> In Proceedings of the Conference on Computer-Supported Cooperative Work And Social Computing (CSCW).</i> 2022.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline"><b>Hana Habib</b>, Megan Li, Ellie Young, Lorrie Faith Cranor. "'Okay, whatever': An Evaluation of Cookie Consent Interfaces." <i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2022.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline">Verena Distler, Matthias Fassl, <b>Hana Habib</b>, Katharina Krombholz, Gabriele Lenzini, Carine Lallemand, Lorrie Faith Cranor, Vincent Koenig. <a href="https://dl.acm.org/doi/10.1145/3469845" target="_blank">“A Systematic Literature Review of Empirical Methods and Risk Representation in Usable Privacy and Security Research.”</a> <i>ACM Transactions on Computer-Human Interaction (TOCHI) 28, no. 6.</i> 2021.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline"><b>Hana Habib</b>. <a href="http://reports-archive.adm.cs.cmu.edu/anon/anon/usr0/ftp/isr2021/CMU-ISR-21-109.pdf" target="_blank">“Evaluating the Usability of Privacy Choice Mechanisms.”</a> PhD dissertation, Carnegie Mellon University, 2021.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Yaxing Yao, Alessandro Acquisti, Lorrie Faith Cranor, Joel Reidenberg, Norman Sadeh, and Florian Schaub. <a href="https://dl.acm.org/doi/10.1145/3411764.3445387" target="_blank">“Toggles, Dollar Signs, and Triangles: How to (In)Effectively Convey Privacy Choices with Icons and Link Texts.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2021.</span>
                         <ul>
                             <li>Icon recommendation adopted into the <a href="https://oag.ca.gov/sites/all/files/agweb/pdfs/privacy/ccpa-notice-4th-set-mods.pdf">Fourth Set of Modifications to the CCPA</a></li>
                         </ul>
                     </li><!--//item--> 
                     <li class="item">
-                        <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Florian Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
+                        <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Jiamin Wang, Yixin Zou, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Florian Schaub. <a href="https://usableprivacy.org/static/files/habib_chi_2020.pdf" target="_blank">“'It’s a scavenger hunt': Usability of Websites’ Opt-Out and Data Deletion Choices.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2020.</span>
                         <ul>
                             <li>Student Paper Honorable Mention for <a href="https://fpf.org/pppm2021/">Future of Privacy Forum's Privacy Papers for Policymakers Award</a></li>
                             <li>Cited in <a href="https://oag.ca.gov/privacy/ccpa/current">CCPA Rulemaking</a></li>
