Summer 2022 publications oupdate

--- a/publications.html
+++ b/publications.html
@@ -49,12 +49,19 @@
         <div class="main-wrapper">
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
-                <ol reversed>
+                <!-- <ol reversed> -->
+                <ul>
                     <li class="item">
-                        <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Ellie Young, Lorrie Faith Cranor. "Identifying User Needs for Advertising Controls on Facebook." <i> In Proceedings of the Conference on Computer-Supported Cooperative Work And Social Computing (CSCW).</i> 2022.</span>
+                        <span class="project-tagline">Michael Miller Yoder and <b>Hana Habib</b>. <a href="https://www.collabagainsthate.org/papers-presentations/research-needs" target="_blank>">"Research Needs for Countering Extremist Hate." </a> Technical Report, <i> The Collaboratory Against Hate.</i> 2022.</span>
                     </li><!--//item--> 
                     <li class="item">
-                        <span class="project-tagline"><b>Hana Habib</b>, Megan Li, Ellie Young, Lorrie Faith Cranor. "'Okay, whatever': An Evaluation of Cookie Consent Interfaces." <i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2022.</span>
+                        <span class="project-tagline"><b>Hana Habib</b> and Lorrie Faith Cranor. "Evaluating the Usability of Privacy Choice Mechanisms." <i> In Proceedings of the Symposium on Usable Privacy and Security (SOUPS).</i> 2022.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Ellie Young, Lorrie Faith Cranor. <a href="https://dl.acm.org/doi/10.1145/3512906" target="_blank">"Identifying User Needs for Advertising Controls on Facebook." </a><i> In Proceedings of the Conference on Computer-Supported Cooperative Work And Social Computing (CSCW).</i> 2022.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline"><b>Hana Habib</b>, Megan Li, Ellie Young, Lorrie Faith Cranor. <a href="https://dl.acm.org/doi/abs/10.1145/3491102.3501985" target="_blank">"'Okay, whatever': An Evaluation of Cookie Consent Interfaces." </a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2022.</span>
                     </li><!--//item--> 
                     <li class="item">
                         <span class="project-tagline">Verena Distler, Matthias Fassl, <b>Hana Habib</b>, Katharina Krombholz, Gabriele Lenzini, Carine Lallemand, Lorrie Faith Cranor, Vincent Koenig. <a href="https://dl.acm.org/doi/10.1145/3469845" target="_blank">“A Systematic Literature Review of Empirical Methods and Risk Representation in Usable Privacy and Security Research.”</a> <i>ACM Transactions on Computer-Human Interaction (TOCHI) 28, no. 6.</i> 2021.</span>
@@ -134,8 +141,8 @@
                          <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/f2012/htq2_mg573/breath_monitor.MP4" target="_blank">Video Demo</a></li>
                      </ul>
                     </li><!--//item-->
-                </ol>
-                
+                </ul>
+            <!-- </ol> -->
             </section><!--//section-->
         </div>
     </div>
