--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Selected Publications</h2>
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Ellie Young, Lorrie Faith Cranor. "Identifying User Needs for Advertising Controls on Facebook." <i> In Proceedings of the Conference on Computer-Supported Cooperative Work And Social Computing (CSCW).</i> 2022.</span>
+                    <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Ellie Young, Lorrie Faith Cranor. <a href="https://dl.acm.org/doi/10.1145/3512906" target="_blank">"Identifying User Needs for Advertising Controls on Facebook."</a> <i> In Proceedings of the Conference on Computer-Supported Cooperative Work And Social Computing (CSCW).</i> 2022.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Yaxing Yao, Alessandro Acquisti, Lorrie Faith Cranor, Joel Reidenberg, Norman Sadeh, and Florian Schaub. <a href="https://dl.acm.org/doi/10.1145/3411764.3445387" target="_blank">“Toggles, Dollar Signs, and Triangles: How to (In)Effectively Convey Privacy Choices with Icons and Link Texts.”</a><i> In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2021. <b>[Icon recommendation adopted into the Fourth Set of Modifications to the CCPA]</b></span>
