--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
                         <span class="project-tagline">Michael Miller Yoder and <b>Hana Habib</b>. <a href="https://www.collabagainsthate.org/papers-presentations/research-needs" target="_blank>">"Research Needs for Countering Extremist Hate." </a> Technical Report, <i> The Collaboratory Against Hate.</i> 2022.</span>
                     </li><!--//item--> 
                     <li class="item">
-                        <span class="project-tagline"><b>Hana Habib</b> and Lorrie Faith Cranor. "Evaluating the Usability of Privacy Choice Mechanisms." <i> In Proceedings of the Symposium on Usable Privacy and Security (SOUPS).</i> 2022.</span>
+                        <span class="project-tagline"><b>Hana Habib</b> and Lorrie Faith Cranor. <a href="https://www.usenix.org/conference/soups2022/presentation/habib">"Evaluating the Usability of Privacy Choice Mechanisms."</a><i> In Proceedings of the Symposium on Usable Privacy and Security (SOUPS).</i> 2022.</span>
                     </li><!--//item--> 
                     <li class="item">
                         <span class="project-tagline"><b>Hana Habib</b>, Sarah Pearman, Ellie Young, Lorrie Faith Cranor. <a href="https://dl.acm.org/doi/10.1145/3512906" target="_blank">"Identifying User Needs for Advertising Controls on Facebook." </a><i> In Proceedings of the Conference on Computer-Supported Cooperative Work And Social Computing (CSCW).</i> 2022.</span>
