--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1 class="name">Hana Habib</h1>
                 <h3 class="tagline"> [ha-na ha-beeb]</h3>
                 <br>
-                <h3 class="tagline">Postdoctoral researcher with a focus in societal computing.</h3>
+                <h3 class="tagline">Associate Director, CMU Privacy Engineering Masters Program.</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
@@ -96,7 +96,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>I am a Postdoctoral Researcher at the Collaboratory Against Hate working with <a href="https://www.hcii.cmu.edu/people/geoff-kaufman">Geoff Kaufman</a> to explore design interventions informed by social psychology that could combat the proliferation of hate on online forums. Previously, I was a PhD student in the Societal Computing program at Carnegie Mellon University, advised by <a href="http://lorrie.cranor.org/" target="_blank">Lorrie Faith Cranor</a>. My research studies 
+                    <p>I am a Special Faculty Instructor and the Associate Director of Carnegie Mellon University's <a href="https://privacy.cs.cmu.edu/index.html" target="_blank">Masters in Privacy Engineering program</a>. I am also part of the Collaboratory Against Hate working with <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a> to explore design interventions informed by social psychology that could combat the proliferation of hate on online forums. Previously, I was a PhD student in the Societal Computing program at Carnegie Mellon University, advised by <a href="http://lorrie.cranor.org/" target="_blank">Lorrie Faith Cranor</a>. My research studies 
                         people's behaviors and preferences when interacting with technology, focusing on issues that have societal impact such as security and privacy.
                     </p>
                     <p>Prior to starting my PhD, I completed a Bachelors in Computer Science and Electrical & Computer Engineering from Cornell University and a Masters in Information Technology - Information Security from Carnegie Mellon University. I also worked as a software engineer for the U.S. Department of Defense.</p>
@@ -125,8 +125,20 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Associate Director and Special Faculty Instructor</h3>
+                            <div class="time">Dec 2022-Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Privacy Engineering Master's Program, Carnegie Mellon University, Pittsburgh</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>I teach and facilitate core courses in the MSIT-Privacy Engineering program, including Engineering Privacy in Software, Special Topics in Privacy, and Privacy-by-Design Workshop.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">Postdoctoral Researcher</h3>
-                            <div class="time">Jan 2022 - Present</div>
+                            <div class="time">Jan 2022 - Dec 2022</div>
                         </div><!--//upper-row-->
                         <div class="company">The Collaboratory Against Hate, Pittsburgh</div>
                     </div><!--//meta-->
