--- a/index.html
+++ b/index.html
@@ -262,6 +262,22 @@
             	<div class="skillset">  
                 <table>
                     <col width="500">
+                     <tr>
+                        <td>
+                        <div class="item">
+                                <b>European Symposium on Usable Security (EuroUSEC) Program Committee (2023)</b>
+                            </div><!--//item-->
+                        </td>
+                    </tr>
+                    <tr>
+                         <tr>
+                        <td>
+                        <div class="item">
+                                <b>Workshop on Usable Security and Privacy (USEC) Program Committee (2023)</b>
+                            </div><!--//item-->
+                        </td>
+                    </tr>
+                    <tr>
                     <tr>
 	                    <td>
 	                    <div class="item">
