--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i>htq@cs.cmu.edu</li>
+                    <li class="email"><i class="fa fa-envelope"></i>htq[at]cs[dot]cmu[dot]edu</li>
                     <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li> -->
                     <!-- <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li> -->
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/hthabib" target="_blank">linkedin.com/in/hthabib</a></li>
