--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1 class="name">Hana Habib</h1>
                 <h3 class="tagline"> [ha-na ha-beeb]</h3>
                 <br>
-                <h3 class="tagline">Associate Director, CMU Privacy Engineering Masters Program.</h3>
+                <h3 class="tagline">Associate Director, CMU Privacy Engineering Masters Program</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
