--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>I am a Special Faculty Instructor and the Associate Director of Carnegie Mellon University's <a href="https://privacy.cs.cmu.edu/index.html" target="_blank">Masters in Privacy Engineering program</a>. I am also part of the Collaboratory Against Hate working with <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a> to explore design interventions informed by social psychology that could combat the proliferation of hate on online forums. Previously, I was a PhD student in the Societal Computing program at Carnegie Mellon University, advised by <a href="http://lorrie.cranor.org/" target="_blank">Lorrie Faith Cranor</a>. My research studies 
+                    <p>I am an Assistant Teaching Professor in the Software and Societal Systems Department (S3D) and the Associate Director of Carnegie Mellon University's <a href="https://privacy.cs.cmu.edu/index.html" target="_blank">Masters in Privacy Engineering program</a>. Previously, I was a Postdoctoral Researcher at the <a href="https://www.collabagainsthate.org/">Collaboratory Against Hate</a> working with <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a>. I completed my PhD in Societal Computing at Carnegie Mellon University, advised by <a href="http://lorrie.cranor.org/" target="_blank">Lorrie Faith Cranor</a>. My research studies 
                         people's behaviors and preferences when interacting with technology, focusing on issues that have societal impact such as security and privacy.
                     </p>
-                    <p>Prior to starting my PhD, I completed a Bachelors in Computer Science and Electrical & Computer Engineering from Cornell University and a Masters in Information Technology - Information Security from Carnegie Mellon University. I also worked as a software engineer for the U.S. Department of Defense.</p>
+                    <p>Prior to my PhD, I completed a Bachelors in Computer Science and Electrical & Computer Engineering from Cornell University and a Masters in Information Technology - Information Security from Carnegie Mellon University. I also worked as a software engineer for the U.S. Department of Defense.</p>
                 </div><!--//summary-->
             </section><!--//section-->
                         
@@ -122,6 +122,18 @@
             
             <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Assistant Teaching Professor</h3>
+                            <div class="time">July 2024-Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Sofftware and Societal Systems Department, Carnegie Mellon University, Pittsburgh</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <!-- <p>I teach and facilitate core courses in the MSIT-Privacy Engineering program, including Engineering Privacy in Software, Special Topics in Privacy, and Privacy-by-Design Workshop.</p> -->
+                    </div><!--//details-->
+                </div><!--//item-->
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
