--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,19 @@
                 <!-- <ol reversed> -->
                 <ul>
                     <li class="item">
-                        <span class="project-tagline">Michael Miller Yoder and <b>Hana Habib</b>. <a href="https://www.collabagainsthate.org/papers-presentations/research-needs" target="_blank>">"Research Needs for Countering Extremist Hate." </a> Technical Report, <i> The Collaboratory Against Hate.</i> 2022.</span>
+                        <span class="project-tagline">Elijah Robert Bouma-Sims, Megan Li, Yanzi Lin, Adia Sakura-Lemessy, Alexandra Nisenoff, Ellie Young, Eleanor Birrell, Lorrie Faith Cranor, and <b>Hana Habib</b>.<a href="https://dl.acm.org/doi/full/10.1145/3544548.3580725" target="_blank>">"A US-UK Usability Evaluation of Consent Management Platform Cookie Consent Interface Design on Desktop and Mobile."</a> <i>In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2023.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline">Jane Im, Ruiyi Wang, Weikun Lyu, Nick Cook, <b>Hana Habib</b>, Lorrie Faith Cranor, Nikola Banovic, and Florian Schaub.<a href="https://dl.acm.org/doi/abs/10.1145/3544548.3580773" target="_blank>">"Less is Not More: Improving Findability and Actionability of Privacy Controls for Online Behavioral Advertising."</a> <i>In Proceedings of the Conference on Human Factors in Computing Systems (CHI).</i> 2023.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline">Verena Distler, Matthias Fassl, <b>Hana Habib</b>, Katharina Krombholz, Gabriele Lenzini, Carine Lallemand, Vincent Koenig, and Lorrie Faith Cranor. <a href="https://library.oapen.org/bitstream/handle/20.500.12657/76226/978-3-031-28643-8.pdf?sequence=1#page=38" target="_blank>">"Empirical Research Methods in Usable Privacy and Security."</a><i> Human Factors in Privacy Research,</i> 29-53, 2023.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline">Lorrie Faith Cranor and <b>Hana Habib</b>. <a href="https://dl.acm.org/doi/pdf/10.1145/3581764" target="_blank>">"Metrics for Success: Why and How to Evaluate Privacy Choice Usability."</a><i> Communications of the ACM,</i> 66(3), 35-37, 2023.</span>
+                    </li><!--//item--> 
+                    <li class="item">
+                        <span class="project-tagline">Michael Miller Yoder and <b>Hana Habib</b>. <a href="https://www.collabagainsthate.org/papers-presentations/research-needs" target="_blank>">"Research Needs for Countering Extremist Hate."</a> Technical Report, <i> The Collaboratory Against Hate.</i> 2022.</span>
                     </li><!--//item--> 
                     <li class="item">
                         <span class="project-tagline"><b>Hana Habib</b> and Lorrie Faith Cranor. <a href="https://www.usenix.org/conference/soups2022/presentation/habib">"Evaluating the Usability of Privacy Choice Mechanisms."</a><i> In Proceedings of the Symposium on Usable Privacy and Security (SOUPS).</i> 2022.</span>
